--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Picture Collage</title>
+    <link rel="shortcut icon" href="images/camera-icon.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1 class="title">My Picture Collage</h1>
+        <p class="desc">A picture collage is a creative way to display multiple photos in a single frame, <br>bringing cherished memories together in a visually appealing design. This project will allow users to <br>easily upload, organize, and showcase their favorite images in a personalized collage layout.</p>
+    </header>
+    <main>
+        <section>
+            <div class="row">
+                <img src="images/A.jpg">
+            </div>
+            <div class="row">
+                <div>
+                    <img src="images/B.jpg">
+                </div>
+                <div>
+                    <img src="images/C.jpg">
+                </div>
+                <div class="vertical-collage">
+                    <img src="images/D.jpg">
+                    <img src="images/E.jpg">
+                </div>
+            </div>
+            <div class="row">
+                <div>
+                    <img src="images/F.jpg" alt="">
+                </div>
+                <div class="square-collage">
+                    <img src="images/G.jpg" alt="">
+                    <img src="images/G.jpg" alt="">
+                    <img src="images/G.jpg" alt="">
+                    <img src="images/G.jpg" alt="">
+                </div>
+                <div>
+                    <img src="images/H.jpg" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
